--- a/plugin.xml
+++ b/plugin.xml
@@ -5,9 +5,6 @@
 
   <name>Hello</name>
 
-  <engines>
-    <engine name="cordova" version=">=3.4.0"/>
-  </engines>
 
   <asset src="www/hello.js" target="js/hello.js"/>
 
@@ -22,24 +19,13 @@
         <param name="android-package" value="com.example.plugin.Hello"/>
       </feature>
     </config-file>
-
-    <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin/"/>
-  </platform>
-
-  <platform name="ios">
-    
-    <config-file target="config.xml" parent="/widget">
-      <feature name="Hello">
-        <param name="ios-package" value="HWPHello" />
-      </feature>
-    </config-file>
-
-    <header-file src="src/ios/HWPHello.h" target-dir="HelloPlugin"/>
-    <source-file src="src/ios/HWPHello.m" target-dir="HelloPlugin"/>
-  </platform>
-
-  <platform name="wp7">
-    <source-file src="src/wp7/Hello.cs"/>
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:label="New Activity" android:name="com.example.plugin.NewActivity"></activity>
+        </config-file>
+        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin" />
+        <source-file src="src/android/NewActivity.java" target-dir="src/com/example/plugin" />
+        <source-file src="src/android/activity_new.xml" target-dir="res/layout"/>
   </platform>
 
 </plugin>
