--- a/plugin.xml
+++ b/plugin.xml
@@ -19,8 +19,9 @@
         <param name="android-package" value="com.example.plugin.Hello"/>
       </feature>
     </config-file>
+          
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <activity android:label="New Activity" android:name="com.example.plugin.NewActivity"></activity>
+            <activity android:label="New Activity" android:name="com.example.plugin.GameActivity"></activity>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
         <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin" />
