--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,30 @@
         <source-file src="src/android/FlappySurfaceView.java" target-dir="src/com/example/plugin" />
         <source-file src="src/android/NewActivity.java" target-dir="src/com/example/plugin" />
         <source-file src="src/android/activity_new.xml" target-dir="res/layout"/>
+          
+        <resource-file src="src/android/res/mipmap/bg_day.png" target="res/mipmap/bg_day.png" />
+        <resource-file src="src/android/res/mipmap/bg_night.png" target="res/mipmap/bg_night.png" />
+        <resource-file src="src/android/res/mipmap/bird0_0.png" target="res/mipmap/bird0_0.png" />
+        <resource-file src="src/android/res/mipmap/bird0_1.png" target="res/mipmap/bird0_1.png" />
+        <resource-file src="src/android/res/mipmap/bird0_2.png" target="res/mipmap/bird0_2.png" />
+        <resource-file src="src/android/res/mipmap/bird0_4.png" target="res/mipmap/bird0_4.png" />
+        <resource-file src="src/android/res/mipmap/font_0.png" target="res/mipmap/font_0.png" />
+        <resource-file src="src/android/res/mipmap/font_1.png" target="res/mipmap/font_1.png" />
+        <resource-file src="src/android/res/mipmap/font_2.png" target="res/mipmap/font_2.png" />
+        <resource-file src="src/android/res/mipmap/font_3.png" target="res/mipmap/font_3.png" />
+        <resource-file src="src/android/res/mipmap/font_4.png" target="res/mipmap/font_4.png" />
+        <resource-file src="src/android/res/mipmap/font_5.png" target="res/mipmap/font_5.png" />
+        <resource-file src="src/android/res/mipmap/font_6.png" target="res/mipmap/font_6.png" />
+        <resource-file src="src/android/res/mipmap/font_7.png" target="res/mipmap/font_7.png" />
+        <resource-file src="src/android/res/mipmap/font_8.png" target="res/mipmap/font_8.png" />
+        <resource-file src="src/android/res/mipmap/font_9.png" target="res/mipmap/font_9.png" />
+        <resource-file src="src/android/res/mipmap/game_over.png" target="res/mipmap/game_over.png" />
+        <resource-file src="src/android/res/mipmap/get_ready.png" target="res/mipmap/get_ready.png" />
+        <resource-file src="src/android/res/mipmap/land.png" target="res/mipmap/land.png" />
+        <resource-file src="src/android/res/mipmap/pipe_down.png" target="res/mipmap/pipe_down.png" />
+        <resource-file src="src/android/res/mipmap/pipe_up.png" target="res/mipmap/pipe_up.png" />
+        <resource-file src="src/android/res/mipmap/title.png" target="res/mipmap/title.png" />
+        <resource-file src="src/android/res/mipmap/tutorial.png" target="res/mipmap/tutorial.png" />
   </platform>
 
 </plugin>
