--- a/plugin.xml
+++ b/plugin.xml
@@ -21,12 +21,13 @@
     </config-file>
           
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <activity android:screenOrientation="portrait" android:label="@string/app_name" android:name=".GameActivity"></activity>
+            <activity android:screenOrientation="portrait" android:label="@string/app_name" android:name=".MainActivity"></activity>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        
+        <source-file src="src/android/FlappySurfaceView.java" target-dir="src/com/example/plugin" />  
         <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin" />
         <source-file src="src/android/MainActivity.java" target-dir="src/com/example/plugin" />
-        <source-file src="src/android/activity_new.xml" target-dir="res/layout"/>
           
         <resource-file src="src/android/res/mipmap/bg_day.png" target="res/mipmap/bg_day.png" />
         <resource-file src="src/android/res/mipmap/bg_night.png" target="res/mipmap/bg_night.png" />
