--- a/plugin.xml
+++ b/plugin.xml
@@ -1,35 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="com.example.plugin"
-        version="0.7.0">
+<?xml version='1.0' encoding='utf-8'?>
+<plugin id="com.game.flappybird.plugin" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" mlns:android="http://schemas.android.com/apk/res/android">
 
-  <name>Hello</name>
+	<name>FlappyBird</name>
 
+	<js-module name="FlappyBird" src="www/FlappyBird.js">
+		<clobbers target="FlappyBird" />
+	</js-module>
 
-  <asset src="www/hello.js" target="js/hello.js"/>
-
-  <js-module src="www/hello.js" name="hello">
-    <clobbers target="hello" />
-  </js-module>
-
-  <platform name="android">
-
-    <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="Hello">
-        <param name="android-package" value="com.example.plugin.Hello"/>
-      </feature>
-    </config-file>
-          
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <activity android:screenOrientation="portrait" android:label="@string/app_name" android:name=".MainActivity"></activity>
+	<platform name="android">
+		<config-file parent="/*" target="res/xml/config.xml">
+            <feature name="FlappyBird">
+                <param name="android-package" value="com.game.flappybird.plugin.FlappyBird" />
+            </feature>
         </config-file>
-        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-        
-        <source-file src="src/android/FlappySurfaceView.java" target-dir="src/com/example/plugin" />  
-        <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin" />
-        <source-file src="src/android/MainActivity.java" target-dir="src/com/example/plugin" />
-          
-        <resource-file src="src/android/res/mipmap/bg_day.png" target="res/mipmap/bg_day.png" />
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:label="Main Activity" android:name="com.game.flappybird.plugin.MainActivity"></activity>
+        </config-file>
+		
+		<resource-file src="src/android/res/mipmap/bg_day.png" target="res/mipmap/bg_day.png" />
         <resource-file src="src/android/res/mipmap/bg_night.png" target="res/mipmap/bg_night.png" />
         <resource-file src="src/android/res/mipmap/bird0_0.png" target="res/mipmap/bird0_0.png" />
         <resource-file src="src/android/res/mipmap/bird0_1.png" target="res/mipmap/bird0_1.png" />
@@ -56,7 +44,11 @@
         <resource-file src="src/android/res/values/colors.xml" target="res/values/color.xml" />
         <resource-file src="src/android/res/drawable/selector_button.xml" target="res/drawable/selector_button.xml" />
         <resource-file src="src/android/res/drawable/shape_score_panel.xml" target="res/drawable/shape_score_panel.xml" />
-          
-  </platform>
+		
+		<config-file parent="/*" target="AndroidManifest.xml"></config-file>
+		<source-file src="src/android/FlappyBird.java" target-dir="src/com/game/flappybird/plugin/FlappyBird" />
+		<source-file src="src/android/MainActivity.java" target-dir="src/com/game/flappybird/plugin/FlappyBird" />
+		 <source-file src="src/android/FlappySurfaceView.java" target-dir="src/com/game/flappybird/plugin/FlappyBird" />
+	</platform>
 
 </plugin>
